--- a/configs/model_duet_debug.yaml
+++ b/configs/model_duet_debug.yaml
@@ -1,9 +1,10 @@
-NAME: DuetModel
-NUM_LAYERS: 2
+# NAME: DuetModel
+NAME: ReactModel
+NUM_LAYERS: 6
 NUM_HEADS: 8
 DROPOUT: 0.1
 INPUT_DIM: 262
-LATENT_DIM: 256
+LATENT_DIM: 512
 FF_SIZE: 1024
 ACTIVATION: gelu
 CHECKPOINT: checkpoints/DEBUG/model/epoch=1499-step=21000.ckpt
