reactive dance working

--- a/configs/model_duet_debug.yaml
+++ b/configs/model_duet_debug.yaml
@@ -1,6 +1,9 @@
 # NAME: DuetModel
+# NUM_LAYERS: 10
+
 NAME: ReactModel
-NUM_LAYERS: 6
+NUM_LAYERS: 20
+
 NUM_HEADS: 8
 DROPOUT: 0.1
 INPUT_DIM: 262
