--- a/configs/model_duet_debug.yaml
+++ b/configs/model_duet_debug.yaml
@@ -1,8 +1,8 @@
-# NAME: DuetModel
-# NUM_LAYERS: 10
+NAME: DuetModel
+NUM_LAYERS: 10
 
-NAME: ReactModel
-NUM_LAYERS: 20
+# NAME: ReactModel
+# NUM_LAYERS: 20
 
 NUM_HEADS: 8
 DROPOUT: 0.1
