--- a/configs/model_duet_debug.yaml
+++ b/configs/model_duet_debug.yaml
@@ -1,8 +1,8 @@
-NAME: DuetModel
-NUM_LAYERS: 10
+# NAME: DuetModel
+# NUM_LAYERS: 10
 
-# NAME: ReactModel
-# NUM_LAYERS: 20
+NAME: ReactModel
+NUM_LAYERS: 20
 
 NUM_HEADS: 8
 DROPOUT: 0.1
@@ -10,9 +10,9 @@ INPUT_DIM: 262
 LATENT_DIM: 512
 FF_SIZE: 1024
 ACTIVATION: gelu
-CHECKPOINT: checkpoints/DEBUG/model/epoch=1499-step=21000.ckpt
+CHECKPOINT: #checkpoints/DEBUG/model/epoch=1499-step=21000.ckpt
 
-DIFFUSION_STEPS: 100
+DIFFUSION_STEPS: 50
 BETA_SCHEDULER: cosine
 SAMPLER: uniform
 
