--- a/configs/model_duet_debug.yaml
+++ b/configs/model_duet_debug.yaml
@@ -1,18 +1,19 @@
-# NAME: DuetModel
-# NUM_LAYERS: 10
+NAME: DuetModel
+NUM_LAYERS: 10
 
-NAME: ReactModel
-NUM_LAYERS: 20
+# NAME: ReactModel
+# NUM_LAYERS: 20
 
 NUM_HEADS: 8
 DROPOUT: 0.1
 INPUT_DIM: 262
 LATENT_DIM: 512
 FF_SIZE: 1024
+MUSIC_DIM: 4800
 ACTIVATION: gelu
 CHECKPOINT: #checkpoints/DEBUG/model/epoch=1499-step=21000.ckpt
 
-DIFFUSION_STEPS: 50
+DIFFUSION_STEPS: 200
 BETA_SCHEDULER: cosine
 SAMPLER: uniform
 
@@ -25,3 +26,6 @@ T_BAR: 200
 CONTROL: text
 STRATEGY: ddim50
 CFG_WEIGHT: 3.5
+
+USE_TEXT: True
+USE_MOTION: False
