--- a/configs/infer_duet_debug.yaml
+++ b/configs/infer_duet_debug.yaml
@@ -1,5 +1,5 @@
 GENERAL:
-  EXP_NAME: IG-S-8
+  EXP_NAME: DEBUG_infer
   CHECKPOINT: ./checkpoints
   LOG_DIR: ./log
 
@@ -7,10 +7,13 @@ TRAIN:
   LR: 1e-4
   WEIGHT_DECAY: 0.00002
   BATCH_SIZE: 32
+  STEP: 1000000
   EPOCH: 2000
   LOG_STEPS: 10
+  SAVE_STEPS: 20000
   SAVE_EPOCH: 100
-  RESUME: #checkpoints/IG-S/8/model/epoch=99-step=17600.ckpt
+  RESUME: /home/verma198/Public/dance/checkpoints/duet20_both_juke/model/model=DuetModel-epoch=99-step=600.ckpt
   NUM_WORKERS: 2
+  MODE: finetune
   LAST_EPOCH: 0
   LAST_ITER: 0
