--- a/configs/model_duet_debug.yaml
+++ b/configs/model_duet_debug.yaml
@@ -1,5 +1,5 @@
 NAME: DuetModel
-NUM_LAYERS: 20
+NUM_LAYERS: 10
 
 # NAME: ReactModel
 # NUM_LAYERS: 20
@@ -11,7 +11,7 @@ LATENT_DIM: 512
 FF_SIZE: 1024
 MUSIC_DIM: 4800
 ACTIVATION: gelu
-CHECKPOINT: #checkpoints/DEBUG/model/epoch=1499-step=21000.ckpt
+CHECKPOINT: /home/verma198/Public/dance/checkpoints/duet20_both_juke/model/model=DuetModel-epoch=99-step=600.ckpt
 
 DIFFUSION_STEPS: 200
 BETA_SCHEDULER: cosine
