--- a/configs/infer_duet_debug.yaml
+++ b/configs/infer_duet_debug.yaml
@@ -1,5 +1,5 @@
 GENERAL:
-  EXP_NAME: DEBUG_infer
+  EXP_NAME: duet10_both_juke_infer
   CHECKPOINT: ./checkpoints
   LOG_DIR: ./log
 
@@ -12,7 +12,7 @@ TRAIN:
   LOG_STEPS: 10
   SAVE_STEPS: 20000
   SAVE_EPOCH: 100
-  RESUME: /home/verma198/Public/dance/checkpoints/duet20_both_juke/model/model=DuetModel-epoch=99-step=600.ckpt
+  RESUME: /home/verma198/epoch_epoch=1499.ckpt
   NUM_WORKERS: 2
   MODE: finetune
   LAST_EPOCH: 0
