--- a/configs/model_duet_debug.yaml
+++ b/configs/model_duet_debug.yaml
@@ -1,8 +1,8 @@
-NAME: DuetModel
-NUM_LAYERS: 20
-
-# NAME: ReactModel
+# NAME: DuetModel
 # NUM_LAYERS: 20
+
+NAME: ReactModel
+NUM_LAYERS: 20
 
 NUM_HEADS: 8
 DROPOUT: 0.1
@@ -28,4 +28,4 @@ STRATEGY: ddim50
 CFG_WEIGHT: 3.5
 
 USE_TEXT: True
-USE_MOTION: True
+USE_MUSIC: True
