--- a/configs/model_duet_debug.yaml
+++ b/configs/model_duet_debug.yaml
@@ -1,8 +1,8 @@
-# NAME: DuetModel
-# NUM_LAYERS: 20
+NAME: DuetModel
+NUM_LAYERS: 4
 
-NAME: ReactModel
-NUM_LAYERS: 20
+# NAME: ReactModel
+# NUM_LAYERS: 20
 
 NUM_HEADS: 8
 DROPOUT: 0.1
@@ -16,6 +16,9 @@ CHECKPOINT: #/home/verma198/Public/dance/checkpoints/duet10_both_juke/model/mode
 DIFFUSION_STEPS: 200
 BETA_SCHEDULER: cosine
 SAMPLER: uniform
+
+# Retrieval configuration
+RETRIEVAL_FILE: /home/verma198/Public/dualflow/dance/data/data.npz
 
 MOTION_REP: global
 FINETUNE: False
