--- a/configs/datasets_duet.yaml
+++ b/configs/datasets_duet.yaml
@@ -1,18 +1,18 @@
 train_set:
     NAME: duet
-    music_root: '/home/verma198/data_split/music'
-    motion_root: '/home/verma198/data_split/motion'
-    text_root: '/home/verma198/data_split/text'
+    music_root: '/home/verma198/Public/dualflow/data_split/music'
+    motion_root: '/home/verma198/Public/dualflow/data_split/motion'
+    text_root: '/home/verma198/Public/dualflow/data_split/text'
     MOTION_REP: global
-    MODE: train
+    MODE: val
     CACHE: True
     music_rep: 'jukebox'
 
 val_set:
     NAME: duet
-    music_root: '/home/verma198/data_split/music'
-    motion_root: '/home/verma198/data_split/motion'
-    text_root: '/home/verma198/data_split/text'
+    music_root: '/home/verma198/Public/dualflow/data_split/music'
+    motion_root: '/home/verma198/Public/dualflow/data_split/motion'
+    text_root: '/home/verma198/Public/dualflow/data_split/text'
     MOTION_REP: global
     MODE: val
     CACHE: True
@@ -20,9 +20,9 @@ val_set:
 
 test_set:
     NAME: duet
-    music_root: '/home/verma198/data_split/music'
-    motion_root: '/home/verma198/data_split/motion'
-    text_root: '/home/verma198/data_split/text'
+    music_root: '/home/verma198/Public/dualflow/data_split/music'
+    motion_root: '/home/verma198/Public/dualflow/data_split/motion'
+    text_root: '/home/verma198/Public/dualflow/data_split/text'
     MOTION_REP: global
     MODE: test
     CACHE: True
