--- a/configs/datasets_duet.yaml
+++ b/configs/datasets_duet.yaml
@@ -4,7 +4,7 @@ train_set:
     motion_root: '/home/verma198/Public/dualflow/data_split/motion'
     text_root: '/home/verma198/Public/dualflow/data_split/text'
     MOTION_REP: global
-    MODE: val
+    MODE: train
     CACHE: True
     music_rep: 'jukebox'
 
